[package]
name = "msyt"
version = "1.1.1"
authors = ["Kyle Clemens <msyt@kyleclemens.com>"]
description = "Import and export from MSBT files to MSYT (YAML or JSON) files."
edition = "2018"

[[bin]]
name = "msyt"
path = "src/bin.rs"

[lib]
name = "msyt"
path = "src/lib.rs"

[dependencies]
base64 = "0.10"
byteordered = "0.4.0"
clap = "2"
failure = "0.1"
glob = "0.3.0"
indexmap = { version = "1", features = ["serde", "serde-1"] }
msbt = { path = "../msbt-rs" }
rayon = "1.5.0"
serde = "1"
serde_derive = "1"
serde_yaml = "0.8.14"
# walkdir = "2.3.1"
