[package]
name = "msyt"
version = "1.3.0"
authors = ["Nicene Nerd <macadamiadaze@gmail.com>"]
description = "Import and export from MSBT files to YAML or JSON files."
edition = "2018"

[[bin]]
name = "msyt"
path = "src/bin.rs"
required-features = ["cli"]

[lib]
name = "msyt"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
base64 = "0.22.1"
byteordered = "0.4.0"
clap = { version = "4.5", features = ["cargo"], optional = true }
glob = "0.3.1"
indexmap = { version = "2.2", features = ["serde"] }
msbt = { git = "https://github.com/NiceneNerd/msbt-rs" }
rayon = { version = "1.10", optional = true }
serde = "1"
serde_derive = "1"
serde_yaml = "0.9.17"

[features]
cli = ["clap", "rayon"]
